gcc/testsuite/rust/rustc/ui/issues/issue-13847.rs
fn main() {
    return.is_failure // { dg-error ".E0609." "" { target *-*-* } }
}

